# pixi

./: Cargo.toml
crates/command_dispatcher/: Cargo.toml
crates/command_dispatcher/src/: executor.rs  lib.rs  limits.rs  task.rs
crates/doge/: Cargo.toml  README.md  ROADMAP.md
crates/doge/examples/: basic_usage.rs  composite_workflow.rs  custom_executors.rs  dependency_data_flow.rs  graph_visualization.rs  pixi_style_reporters.rs  production_pixi_integration.rs
crates/doge/src/: context.rs  error.rs  executor.rs  graph.rs  lib.rs  reporter.rs  task.rs  types.rs
crates/pixi_build_frontend/: Cargo.toml
crates/pixi_build_frontend/src/backend/: stderr.rs
crates/pixi_cli/src/: list.rs
crates/pixi_command_dispatcher/: Cargo.toml
crates/pixi_command_dispatcher/src/: cache_dirs.rs  executor.rs  lib.rs  limits.rs  reporter.rs
crates/pixi_command_dispatcher/src/command_dispatcher/: instantiate_backend.rs  mod.rs  url.rs
crates/pixi_command_dispatcher/src/command_dispatcher_processor/: mod.rs  url.rs
crates/pixi_command_dispatcher/src/source_checkout/: mod.rs
crates/pixi_consts/src/: consts.rs
crates/pixi_global/src/project/: mod.rs
crates/pixi_manifest/src/: build_system.rs
crates/pixi_manifest/src/toml/: build_backend.rs
crates/pixi_manifest/src/toml/snapshots/: pixi_manifest__toml__build_backend__test__git_source_requires_rev.snap  pixi_manifest__toml__build_backend__test__url_source_requires_sha256.snap
crates/pixi_reporters/src/: lib.rs  url.rs
docs/reference/: pixi_manifest.md
schema/: model.py  schema.json
